Some animation and fix of few scrollbars

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@ html, body, #root{
     margin: 0;
     padding: 0;
     font-family: 'League Mono', sans-serif;
-    overflow-x: hidden;                                            
+    overflow: hidden;                                            
 }
 
 body{
